--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react-portfolio",
   "version": "0.1.0",
+  "homepage": "https://anisha-sapkota.github.io/react-portfolio",
   "private": true,
   "dependencies": {
     "@headlessui/react": "^1.7.7",
